--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-ViewportPos=0,0
+ViewportPos=86,109
 ViewportId=0x16723995
 Size=313,648
 Collapsed=0
@@ -46,20 +46,20 @@ Size=177,96
 Collapsed=0
 
 [Window][Camera Mode]
-ViewportPos=818,308
+ViewportPos=1075,400
 ViewportId=0x079D3A04
-Pos=0,75
-Size=604,301
+Pos=0,72
+Size=604,300
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Particle]
-ViewportPos=818,308
+ViewportPos=1075,400
 ViewportId=0x079D3A04
-Pos=0,75
-Size=604,301
+Pos=0,72
+Size=604,300
 Collapsed=0
-DockId=0x00000003,1
+DockId=0x00000003,2
 
 [Window][Particle Control]
 Pos=60,60
@@ -98,7 +98,7 @@ Size=1280,720
 Collapsed=0
 
 [Window][MainDockSpace]
-ViewportPos=818,308
+ViewportPos=1075,400
 ViewportId=0x079D3A04
 Size=920,717
 Collapsed=0
@@ -110,10 +110,10 @@ Collapsed=0
 DockId=0xC3C5E3D9,3
 
 [Window][Lighting Editor]
-ViewportPos=818,308
+ViewportPos=1075,400
 ViewportId=0x079D3A04
-Pos=606,75
-Size=314,642
+Pos=606,72
+Size=314,645
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -128,12 +128,12 @@ Collapsed=0
 DockId=0xC3C5E3D9,1
 
 [Window][Emitter]
-ViewportPos=818,308
+ViewportPos=1075,400
 ViewportId=0x079D3A04
-Pos=0,378
-Size=604,339
+Pos=0,374
+Size=604,343
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x00000005,0
 
 [Window][EmitterPos]
 Pos=319,578
@@ -147,18 +147,18 @@ Size=830,40
 Collapsed=0
 
 [Window][Player Editor]
-ViewportPos=818,308
+ViewportPos=1075,400
 ViewportId=0x079D3A04
-Pos=606,75
-Size=314,642
+Pos=606,72
+Size=314,645
 Collapsed=0
 DockId=0x0000000C,2
 
 [Window][Weapon Debug]
-ViewportPos=818,308
+ViewportPos=1075,400
 ViewportId=0x079D3A04
-Pos=606,75
-Size=314,642
+Pos=606,72
+Size=314,645
 Collapsed=0
 DockId=0x0000000C,1
 
@@ -168,20 +168,20 @@ ViewportId=0x079D3A04
 Pos=0,412
 Size=604,305
 Collapsed=0
-DockId=0x00000007,1
+DockId=0x00000005,1
 
 [Window][Collision Manager Debug]
-ViewportPos=818,308
+ViewportPos=1075,400
 ViewportId=0x079D3A04
-Pos=606,75
-Size=314,642
+Pos=606,72
+Size=314,645
 Collapsed=0
 DockId=0x0000000C,3
 
 [Window][FPS]
-ViewportPos=818,308
+ViewportPos=1075,400
 ViewportId=0x079D3A04
-Pos=0,23
+Pos=0,20
 Size=920,50
 Collapsed=0
 DockId=0x00000008,0
@@ -213,12 +213,12 @@ Size=532,319
 Collapsed=0
 
 [Window][JsonManager]
-ViewportPos=818,308
+ViewportPos=1075,400
 ViewportId=0x079D3A04
-Pos=0,75
-Size=604,301
+Pos=0,72
+Size=604,300
 Collapsed=0
-DockId=0x00000003,2
+DockId=0x00000003,1
 
 [Window][JsonManager - FollowCamera]
 Pos=49,55
@@ -239,12 +239,12 @@ Collapsed=0
 
 [Docking][Data]
 DockNode        ID=0x00000002 Pos=49,55 Size=495,296 Selected=0x656C8C0F
-DockSpace       ID=0xAFC85805 Window=0x079D3A04 Pos=818,331 Size=920,694 Split=Y
+DockSpace       ID=0xAFC85805 Window=0x079D3A04 Pos=1075,420 Size=920,697 Split=Y
   DockNode      ID=0x00000008 Parent=0xAFC85805 SizeRef=648,50 Selected=0x5ACCD6C9
   DockNode      ID=0x00000009 Parent=0xAFC85805 SizeRef=648,492 Split=X
-    DockNode    ID=0x00000007 Parent=0x00000009 SizeRef=604,697 Split=Y
-      DockNode  ID=0x00000003 Parent=0x00000007 SizeRef=1256,301 Selected=0x3AD7C986
-      DockNode  ID=0x0000000B Parent=0x00000007 SizeRef=1256,32 CentralNode=1 Selected=0xFBFB596A
+    DockNode    ID=0x00000007 Parent=0x00000009 SizeRef=604,697 Split=Y Selected=0xFBFB596A
+      DockNode  ID=0x00000003 Parent=0x00000007 SizeRef=604,300 Selected=0x8C00EA1E
+      DockNode  ID=0x00000005 Parent=0x00000007 SizeRef=604,343 CentralNode=1 Selected=0xFBFB596A
     DockNode    ID=0x0000000C Parent=0x00000009 SizeRef=314,697 Selected=0xD6D5E0EF
 DockSpace       ID=0xC3C5E3D9 Pos=576,189 Size=1256,697 Split=Y
   DockNode      ID=0x00000004 Parent=0xC3C5E3D9 SizeRef=1264,391 CentralNode=1 Selected=0x744B41B5
