--- a/YoRigine.vcxproj.filters
+++ b/YoRigine.vcxproj.filters
@@ -465,6 +465,9 @@
     <ClCompile Include="Engine\Utility\Loaders\Model\ModelLoader.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Engine\Generators\OffScreen\OffScreen.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Utility\Systems\Input\Input.h">
@@ -698,12 +701,16 @@
     <ClInclude Include="Engine\Utility\Loaders\Model\ModelLoader.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="Engine\Generators\OffScreen\OffScreen.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\shaders\Particle.hlsli" />
     <None Include="Resources\shaders\Skinning.hlsli" />
     <None Include="Resources\shaders\Skinning.PS.hlsl" />
     <None Include="Resources\shaders\Sprite.hlsli" />
+    <None Include="Resources\Shaders\CopyImage\CopyImage.hlsli" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Resources\shaders\Particle.PS.hlsl" />
@@ -713,5 +720,7 @@
     <FxCompile Include="Resources\shaders\Skinning.VS.hlsl" />
     <FxCompile Include="Resources\shaders\Sprite.PS.hlsl" />
     <FxCompile Include="Resources\shaders\Sprite.VS.hlsl" />
+    <FxCompile Include="Resources\Shaders\CopyImage\CopyImage.PS.hlsl" />
+    <FxCompile Include="Resources\Shaders\CopyImage\CopyImage.VS.hlsl" />
   </ItemGroup>
 </Project>
