--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,6 @@
 [Window][Debug##Default]
-Pos=0,0
+ViewportPos=86,109
+ViewportId=0x16723995
 Size=313,648
 Collapsed=0
 
@@ -45,7 +46,7 @@ Size=177,96
 Collapsed=0
 
 [Window][Camera Mode]
-ViewportPos=1075,400
+ViewportPos=1076,400
 ViewportId=0x079D3A04
 Pos=0,72
 Size=604,300
@@ -53,7 +54,7 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Particle]
-ViewportPos=1075,400
+ViewportPos=1076,400
 ViewportId=0x079D3A04
 Pos=0,72
 Size=604,300
@@ -97,7 +98,7 @@ Size=1280,720
 Collapsed=0
 
 [Window][MainDockSpace]
-ViewportPos=1075,400
+ViewportPos=1076,400
 ViewportId=0x079D3A04
 Size=920,717
 Collapsed=0
@@ -109,7 +110,7 @@ Collapsed=0
 DockId=0xC3C5E3D9,3
 
 [Window][Lighting Editor]
-ViewportPos=1075,400
+ViewportPos=1076,400
 ViewportId=0x079D3A04
 Pos=606,72
 Size=314,645
@@ -127,7 +128,7 @@ Collapsed=0
 DockId=0xC3C5E3D9,1
 
 [Window][Emitter]
-ViewportPos=1075,400
+ViewportPos=1076,400
 ViewportId=0x079D3A04
 Pos=0,374
 Size=604,343
@@ -146,7 +147,7 @@ Size=830,40
 Collapsed=0
 
 [Window][Player Editor]
-ViewportPos=1075,400
+ViewportPos=1076,400
 ViewportId=0x079D3A04
 Pos=606,72
 Size=314,645
@@ -154,7 +155,7 @@ Collapsed=0
 DockId=0x0000000C,2
 
 [Window][Weapon Debug]
-ViewportPos=1075,400
+ViewportPos=1076,400
 ViewportId=0x079D3A04
 Pos=606,72
 Size=314,645
@@ -170,7 +171,7 @@ Collapsed=0
 DockId=0x00000005,1
 
 [Window][Collision Manager Debug]
-ViewportPos=1075,400
+ViewportPos=1076,400
 ViewportId=0x079D3A04
 Pos=606,72
 Size=314,645
@@ -178,7 +179,7 @@ Collapsed=0
 DockId=0x0000000C,3
 
 [Window][FPS]
-ViewportPos=1075,400
+ViewportPos=1076,400
 ViewportId=0x079D3A04
 Pos=0,20
 Size=920,50
@@ -212,7 +213,7 @@ Size=532,319
 Collapsed=0
 
 [Window][JsonManager]
-ViewportPos=1075,400
+ViewportPos=1076,400
 ViewportId=0x079D3A04
 Pos=0,72
 Size=604,300
@@ -238,7 +239,7 @@ Collapsed=0
 
 [Docking][Data]
 DockNode        ID=0x00000002 Pos=49,55 Size=495,296 Selected=0x656C8C0F
-DockSpace       ID=0xAFC85805 Window=0x079D3A04 Pos=1075,420 Size=920,697 Split=Y
+DockSpace       ID=0xAFC85805 Window=0x079D3A04 Pos=1076,420 Size=920,697 Split=Y
   DockNode      ID=0x00000008 Parent=0xAFC85805 SizeRef=648,50 Selected=0x5ACCD6C9
   DockNode      ID=0x00000009 Parent=0xAFC85805 SizeRef=648,492 Split=X
     DockNode    ID=0x00000007 Parent=0x00000009 SizeRef=604,697 Split=Y Selected=0xFBFB596A
