--- a/imgui.ini
+++ b/imgui.ini
@@ -45,20 +45,16 @@ Size=177,96
 Collapsed=0
 
 [Window][Camera Mode]
-ViewportPos=1169,567
-ViewportId=0x079D3A04
-Pos=0,72
-Size=604,300
+Pos=-7,475
+Size=311,248
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x0000000C,4
 
 [Window][Particle]
-ViewportPos=1169,567
-ViewportId=0x079D3A04
-Pos=0,72
-Size=604,300
+Pos=-7,475
+Size=311,248
 Collapsed=0
-DockId=0x00000003,2
+DockId=0x0000000C,6
 
 [Window][Particle Control]
 Pos=60,60
@@ -97,9 +93,8 @@ Size=1280,720
 Collapsed=0
 
 [Window][MainDockSpace]
-ViewportPos=1169,567
-ViewportId=0x079D3A04
-Size=920,717
+Pos=0,0
+Size=1280,720
 Collapsed=0
 
 [Window][Point Light Editor]
@@ -109,10 +104,8 @@ Collapsed=0
 DockId=0xC3C5E3D9,3
 
 [Window][Lighting Editor]
-ViewportPos=1169,567
-ViewportId=0x079D3A04
-Pos=606,72
-Size=314,645
+Pos=-7,475
+Size=311,248
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -127,12 +120,10 @@ Collapsed=0
 DockId=0xC3C5E3D9,1
 
 [Window][Emitter]
-ViewportPos=1169,567
-ViewportId=0x079D3A04
-Pos=0,374
-Size=604,343
+Pos=-7,475
+Size=311,248
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x0000000C,7
 
 [Window][EmitterPos]
 Pos=319,578
@@ -146,18 +137,14 @@ Size=830,40
 Collapsed=0
 
 [Window][Player Editor]
-ViewportPos=1169,567
-ViewportId=0x079D3A04
-Pos=606,72
-Size=314,645
+Pos=-7,475
+Size=311,248
 Collapsed=0
 DockId=0x0000000C,2
 
 [Window][Weapon Debug]
-ViewportPos=1169,567
-ViewportId=0x079D3A04
-Pos=606,72
-Size=314,645
+Pos=-7,475
+Size=311,248
 Collapsed=0
 DockId=0x0000000C,1
 
@@ -167,21 +154,17 @@ ViewportId=0x079D3A04
 Pos=0,412
 Size=604,305
 Collapsed=0
-DockId=0x00000005,1
+DockId=0x0000000C,1
 
 [Window][Collision Manager Debug]
-ViewportPos=1169,567
-ViewportId=0x079D3A04
-Pos=606,72
-Size=314,645
+Pos=-7,475
+Size=311,248
 Collapsed=0
 DockId=0x0000000C,3
 
 [Window][FPS]
-ViewportPos=1169,567
-ViewportId=0x079D3A04
-Pos=0,20
-Size=920,50
+Pos=1179,8
+Size=93,704
 Collapsed=0
 DockId=0x00000008,0
 
@@ -204,7 +187,7 @@ ViewportId=0x079D3A04
 Pos=0,23
 Size=404,315
 Collapsed=0
-DockId=0x00000003,4
+DockId=0x0000000C,4
 
 [Window][JsonManager Variables]
 Pos=150,361
@@ -212,12 +195,10 @@ Size=532,319
 Collapsed=0
 
 [Window][JsonManager]
-ViewportPos=1169,567
-ViewportId=0x079D3A04
-Pos=0,72
-Size=604,300
+Pos=-7,475
+Size=311,248
 Collapsed=0
-DockId=0x00000003,1
+DockId=0x0000000C,5
 
 [Window][JsonManager - FollowCamera]
 Pos=49,55
@@ -237,15 +218,12 @@ Size=300,100
 Collapsed=0
 
 [Docking][Data]
-DockNode        ID=0x00000002 Pos=49,55 Size=495,296 Selected=0x656C8C0F
-DockSpace       ID=0xAFC85805 Window=0x079D3A04 Pos=1169,587 Size=920,697 Split=Y
-  DockNode      ID=0x00000008 Parent=0xAFC85805 SizeRef=648,50 Selected=0x5ACCD6C9
-  DockNode      ID=0x00000009 Parent=0xAFC85805 SizeRef=648,492 Split=X
-    DockNode    ID=0x00000007 Parent=0x00000009 SizeRef=604,697 Split=Y Selected=0xFBFB596A
-      DockNode  ID=0x00000003 Parent=0x00000007 SizeRef=604,300 Selected=0x8C00EA1E
-      DockNode  ID=0x00000005 Parent=0x00000007 SizeRef=604,343 CentralNode=1 Selected=0xFBFB596A
-    DockNode    ID=0x0000000C Parent=0x00000009 SizeRef=314,697 Selected=0xD6D5E0EF
-DockSpace       ID=0xC3C5E3D9 Pos=576,189 Size=1256,697 Split=Y
-  DockNode      ID=0x00000004 Parent=0xC3C5E3D9 SizeRef=1264,391 CentralNode=1 Selected=0x744B41B5
-  DockNode      ID=0x00000001 Parent=0xC3C5E3D9 SizeRef=1264,327 Selected=0x5BD5222E
+DockNode    ID=0x00000002 Pos=49,55 Size=495,296 Selected=0x656C8C0F
+DockNode    ID=0x0000000C Pos=-7,475 Size=311,248 Selected=0xFBFB596A
+DockSpace   ID=0xAFC85805 Window=0x079D3A04 Pos=8,8 Size=1264,704 Split=X
+  DockNode  ID=0x00000006 Parent=0xAFC85805 SizeRef=855,704 CentralNode=1 Selected=0xFBFB596A
+  DockNode  ID=0x00000008 Parent=0xAFC85805 SizeRef=93,704 Selected=0x5ACCD6C9
+DockSpace   ID=0xC3C5E3D9 Pos=576,189 Size=1256,697 Split=Y
+  DockNode  ID=0x00000004 Parent=0xC3C5E3D9 SizeRef=1264,391 CentralNode=1 Selected=0x744B41B5
+  DockNode  ID=0x00000001 Parent=0xC3C5E3D9 SizeRef=1264,327 Selected=0x5BD5222E
 
