Depthを使用したアウトラインシェーダーの追加

--- a/YoRigine.vcxproj.filters
+++ b/YoRigine.vcxproj.filters
@@ -728,5 +728,6 @@
     <FxCompile Include="Resources\Shaders\PostEffect\Smoothing\BoxFilter.PS.hlsl" />
     <FxCompile Include="Resources\Shaders\PostEffect\Smoothing\GaussianFilter.PS.hlsl" />
     <FxCompile Include="Resources\Shaders\PostEffect\OutLine\LuminanceBasedOutLine.PS.hlsl" />
+    <FxCompile Include="Resources\Shaders\PostEffect\OutLine\DepthBasedOutLine.PS.hlsl" />
   </ItemGroup>
 </Project>
