--- a/imgui.ini
+++ b/imgui.ini
@@ -217,6 +217,11 @@ Pos=490,310
 Size=300,100
 Collapsed=0
 
+[Window][Occlusion Query]
+Pos=60,60
+Size=257,158
+Collapsed=0
+
 [Docking][Data]
 DockNode    ID=0x00000002 Pos=49,55 Size=495,296 Selected=0x656C8C0F
 DockNode    ID=0x0000000C Pos=31,448 Size=282,248 Selected=0xD6D5E0EF
