--- a/imgui.ini
+++ b/imgui.ini
@@ -45,14 +45,14 @@ Size=177,96
 Collapsed=0
 
 [Window][Camera Mode]
-Pos=31,448
-Size=282,248
+Pos=20,249
+Size=282,427
 Collapsed=0
 DockId=0x0000000C,4
 
 [Window][Particle]
-Pos=31,448
-Size=282,248
+Pos=20,249
+Size=282,427
 Collapsed=0
 DockId=0x0000000C,6
 
@@ -94,7 +94,7 @@ Collapsed=0
 
 [Window][MainDockSpace]
 Pos=0,0
-Size=1280,720
+Size=1280,707
 Collapsed=0
 
 [Window][Point Light Editor]
@@ -104,8 +104,8 @@ Collapsed=0
 DockId=0xC3C5E3D9,3
 
 [Window][Lighting Editor]
-Pos=31,448
-Size=282,248
+Pos=20,249
+Size=282,427
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -120,8 +120,8 @@ Collapsed=0
 DockId=0xC3C5E3D9,1
 
 [Window][Emitter]
-Pos=31,448
-Size=282,248
+Pos=20,249
+Size=282,427
 Collapsed=0
 DockId=0x0000000C,7
 
@@ -137,14 +137,14 @@ Size=830,40
 Collapsed=0
 
 [Window][Player Editor]
-Pos=31,448
-Size=282,248
+Pos=20,249
+Size=282,427
 Collapsed=0
 DockId=0x0000000C,2
 
 [Window][Weapon Debug]
-Pos=31,448
-Size=282,248
+Pos=20,249
+Size=282,427
 Collapsed=0
 DockId=0x0000000C,1
 
@@ -157,14 +157,14 @@ Collapsed=0
 DockId=0x0000000C,1
 
 [Window][Collision Manager Debug]
-Pos=31,448
-Size=282,248
+Pos=20,249
+Size=282,427
 Collapsed=0
 DockId=0x0000000C,3
 
 [Window][FPS]
-Pos=1179,8
-Size=93,704
+Pos=1175,8
+Size=97,691
 Collapsed=0
 DockId=0x00000008,0
 
@@ -195,8 +195,8 @@ Size=532,319
 Collapsed=0
 
 [Window][JsonManager]
-Pos=31,448
-Size=282,248
+Pos=20,249
+Size=282,427
 Collapsed=0
 DockId=0x0000000C,5
 
@@ -218,16 +218,16 @@ Size=300,100
 Collapsed=0
 
 [Window][Occlusion Query]
-Pos=60,60
+Pos=93,54
 Size=257,158
 Collapsed=0
 
 [Docking][Data]
 DockNode    ID=0x00000002 Pos=49,55 Size=495,296 Selected=0x656C8C0F
-DockNode    ID=0x0000000C Pos=31,448 Size=282,248 Selected=0xD6D5E0EF
-DockSpace   ID=0xAFC85805 Window=0x079D3A04 Pos=8,8 Size=1264,704 Split=X
-  DockNode  ID=0x00000006 Parent=0xAFC85805 SizeRef=855,704 CentralNode=1 Selected=0xFBFB596A
-  DockNode  ID=0x00000008 Parent=0xAFC85805 SizeRef=93,704 Selected=0x5ACCD6C9
+DockNode    ID=0x0000000C Pos=20,249 Size=282,427 Selected=0x8DD1DBAE
+DockSpace   ID=0xAFC85805 Window=0x079D3A04 Pos=8,8 Size=1264,691 Split=X
+  DockNode  ID=0x00000006 Parent=0xAFC85805 SizeRef=1165,704 CentralNode=1 Selected=0xFBFB596A
+  DockNode  ID=0x00000008 Parent=0xAFC85805 SizeRef=97,704 Selected=0x5ACCD6C9
 DockSpace   ID=0xC3C5E3D9 Pos=576,189 Size=1256,697 Split=Y
   DockNode  ID=0x00000004 Parent=0xC3C5E3D9 SizeRef=1264,391 CentralNode=1 Selected=0x744B41B5
   DockNode  ID=0x00000001 Parent=0xC3C5E3D9 SizeRef=1264,327 Selected=0x5BD5222E
