マップチップ用の当たり判定クラスの追加

--- a/YoRigine.vcxproj
+++ b/YoRigine.vcxproj
@@ -156,6 +156,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="Engine\Utility\Systems\MapChip\MapChipField.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Engine\Utility\Loaders\Model\Material.cpp" />
+    <ClCompile Include="Engine\Utility\Systems\MapChip\MapChipCollision.cpp" />
     <ClCompile Include="Math\Matrix4x4.cpp" />
     <ClCompile Include="Engine\Utility\Loaders\Model\Model.cpp" />
     <ClCompile Include="Engine\Utility\Loaders\Model\ModelCommon.cpp" />
@@ -228,6 +229,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Application\Scenes\MainScenes\Transitions\Fade\FadeTransition.h" />
     <ClInclude Include="Engine\Utility\Loaders\Model\Material.h" />
     <ClInclude Include="Engine\Utility\Systems\MapChip\MapChipField.h" />
+    <ClInclude Include="Engine\Utility\Systems\MapChip\MapChipCollision.h" />
     <ClInclude Include="Math\MathFunc.h" />
     <ClInclude Include="Math\Matrix3x3.h" />
     <ClInclude Include="Math\Matrix4x4.h" />
