--- a/imgui.ini
+++ b/imgui.ini
@@ -46,13 +46,13 @@ Collapsed=0
 
 [Window][Camera Mode]
 Pos=20,249
-Size=282,427
+Size=498,427
 Collapsed=0
 DockId=0x0000000C,4
 
 [Window][Particle]
 Pos=20,249
-Size=282,427
+Size=498,427
 Collapsed=0
 DockId=0x0000000C,6
 
@@ -105,7 +105,7 @@ DockId=0xC3C5E3D9,3
 
 [Window][Lighting Editor]
 Pos=20,249
-Size=282,427
+Size=498,427
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -121,7 +121,7 @@ DockId=0xC3C5E3D9,1
 
 [Window][Emitter]
 Pos=20,249
-Size=282,427
+Size=498,427
 Collapsed=0
 DockId=0x0000000C,7
 
@@ -138,13 +138,13 @@ Collapsed=0
 
 [Window][Player Editor]
 Pos=20,249
-Size=282,427
+Size=498,427
 Collapsed=0
 DockId=0x0000000C,2
 
 [Window][Weapon Debug]
 Pos=20,249
-Size=282,427
+Size=498,427
 Collapsed=0
 DockId=0x0000000C,1
 
@@ -158,7 +158,7 @@ DockId=0x0000000C,1
 
 [Window][Collision Manager Debug]
 Pos=20,249
-Size=282,427
+Size=498,427
 Collapsed=0
 DockId=0x0000000C,3
 
@@ -196,7 +196,7 @@ Collapsed=0
 
 [Window][JsonManager]
 Pos=20,249
-Size=282,427
+Size=498,427
 Collapsed=0
 DockId=0x0000000C,5
 
@@ -224,7 +224,7 @@ Collapsed=0
 
 [Docking][Data]
 DockNode    ID=0x00000002 Pos=49,55 Size=495,296 Selected=0x656C8C0F
-DockNode    ID=0x0000000C Pos=20,249 Size=282,427 Selected=0xD6D5E0EF
+DockNode    ID=0x0000000C Pos=20,249 Size=498,427 Selected=0x8DD1DBAE
 DockSpace   ID=0xAFC85805 Window=0x079D3A04 Pos=8,8 Size=1264,704 Split=X
   DockNode  ID=0x00000006 Parent=0xAFC85805 SizeRef=1165,704 CentralNode=1 Selected=0xFBFB596A
   DockNode  ID=0x00000008 Parent=0xAFC85805 SizeRef=97,704 Selected=0x5ACCD6C9
