--- a/YoRigine.vcxproj
+++ b/YoRigine.vcxproj
@@ -191,6 +191,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="Engine\Utility\Loaders\Model\ModelTest.cpp" />
     <ClCompile Include="Engine\Utility\Loaders\Model\ModelLoader.cpp" />
     <ClCompile Include="Engine\Generators\OffScreen\OffScreen.cpp" />
+    <ClCompile Include="Engine\Utility\Systems\UI\UIBase.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Utility\Loaders\Model\AnimationSystem.h" />
@@ -274,6 +275,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Engine\Utility\Loaders\Model\ModelTest.h" />
     <ClInclude Include="Engine\Utility\Loaders\Model\ModelLoader.h" />
     <ClInclude Include="Engine\Generators\OffScreen\OffScreen.h" />
+    <ClInclude Include="Engine\Utility\Systems\UI\UIBase.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="externals\DirectXTex\DirectXTex_Desktop_2022_Win10.vcxproj">
