UIBaseクラスの調整中 テクスチャを再読み込みする箇所を修正中です

--- a/YoRigine.vcxproj
+++ b/YoRigine.vcxproj
@@ -192,6 +192,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="Engine\Utility\Loaders\Model\ModelLoader.cpp" />
     <ClCompile Include="Engine\Generators\OffScreen\OffScreen.cpp" />
     <ClCompile Include="Engine\Utility\Systems\UI\UIBase.cpp" />
+    <ClCompile Include="Engine\Utility\Systems\UI\UIButton.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Utility\Loaders\Model\AnimationSystem.h" />
@@ -276,6 +277,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Engine\Utility\Loaders\Model\ModelLoader.h" />
     <ClInclude Include="Engine\Generators\OffScreen\OffScreen.h" />
     <ClInclude Include="Engine\Utility\Systems\UI\UIBase.h" />
+    <ClInclude Include="Engine\Utility\Systems\UI\UIButton.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="externals\DirectXTex\DirectXTex_Desktop_2022_Win10.vcxproj">
