--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=373,168
+Pos=578,189
 Size=723,357
 Collapsed=0
 
@@ -45,13 +45,13 @@ Size=177,96
 Collapsed=0
 
 [Window][Camera Mode]
-Pos=802,338
+Pos=956,500
 Size=498,427
 Collapsed=0
 DockId=0x0000000C,4
 
 [Window][Particle]
-Pos=802,338
+Pos=956,500
 Size=498,427
 Collapsed=0
 DockId=0x0000000C,6
@@ -104,7 +104,7 @@ Collapsed=0
 DockId=0xC3C5E3D9,3
 
 [Window][Lighting Editor]
-Pos=802,338
+Pos=956,500
 Size=498,427
 Collapsed=0
 DockId=0x0000000C,0
@@ -120,7 +120,7 @@ Collapsed=0
 DockId=0xC3C5E3D9,1
 
 [Window][Emitter]
-Pos=802,338
+Pos=956,500
 Size=498,427
 Collapsed=0
 DockId=0x0000000C,7
@@ -137,13 +137,13 @@ Size=830,40
 Collapsed=0
 
 [Window][Player Editor]
-Pos=802,338
+Pos=956,500
 Size=498,427
 Collapsed=0
 DockId=0x0000000C,2
 
 [Window][Weapon Debug]
-Pos=802,338
+Pos=956,500
 Size=498,427
 Collapsed=0
 DockId=0x0000000C,1
@@ -157,7 +157,7 @@ Collapsed=0
 DockId=0x0000000C,1
 
 [Window][Collision Manager Debug]
-Pos=802,338
+Pos=956,500
 Size=498,427
 Collapsed=0
 DockId=0x0000000C,3
@@ -195,7 +195,7 @@ Size=532,319
 Collapsed=0
 
 [Window][JsonManager]
-Pos=802,338
+Pos=956,500
 Size=498,427
 Collapsed=0
 DockId=0x0000000C,5
@@ -232,9 +232,14 @@ Pos=384,146
 Size=602,432
 Collapsed=0
 
+[Window][TextureFolderDialog]
+Pos=384,150
+Size=516,426
+Collapsed=0
+
 [Docking][Data]
 DockNode    ID=0x00000002 Pos=49,55 Size=495,296 Selected=0x656C8C0F
-DockNode    ID=0x0000000C Pos=802,338 Size=498,427 Selected=0xD6D5E0EF
+DockNode    ID=0x0000000C Pos=956,500 Size=498,427 Selected=0xD6D5E0EF
 DockSpace   ID=0xAFC85805 Window=0x079D3A04 Pos=8,8 Size=1264,704 Split=X
   DockNode  ID=0x00000006 Parent=0xAFC85805 SizeRef=1177,704 CentralNode=1 Selected=0xFBFB596A
   DockNode  ID=0x00000008 Parent=0xAFC85805 SizeRef=85,704 Selected=0x5ACCD6C9
