オフスクリーンに映すもの映さないものを設定できるように変更

--- a/imgui.ini
+++ b/imgui.ini
@@ -45,13 +45,13 @@ Size=177,96
 Collapsed=0
 
 [Window][Camera Mode]
-Pos=1004,243
+Pos=972,302
 Size=498,427
 Collapsed=0
 DockId=0x0000000C,4
 
 [Window][Particle]
-Pos=1004,243
+Pos=972,302
 Size=498,427
 Collapsed=0
 DockId=0x0000000C,6
@@ -104,7 +104,7 @@ Collapsed=0
 DockId=0xC3C5E3D9,3
 
 [Window][Lighting Editor]
-Pos=1004,243
+Pos=972,302
 Size=498,427
 Collapsed=0
 DockId=0x0000000C,0
@@ -120,7 +120,7 @@ Collapsed=0
 DockId=0xC3C5E3D9,1
 
 [Window][Emitter]
-Pos=1004,243
+Pos=972,302
 Size=498,427
 Collapsed=0
 DockId=0x0000000C,7
@@ -137,13 +137,13 @@ Size=830,40
 Collapsed=0
 
 [Window][Player Editor]
-Pos=1004,243
+Pos=972,302
 Size=498,427
 Collapsed=0
 DockId=0x0000000C,2
 
 [Window][Weapon Debug]
-Pos=1004,243
+Pos=972,302
 Size=498,427
 Collapsed=0
 DockId=0x0000000C,1
@@ -157,7 +157,7 @@ Collapsed=0
 DockId=0x0000000C,1
 
 [Window][Collision Manager Debug]
-Pos=1004,243
+Pos=972,302
 Size=498,427
 Collapsed=0
 DockId=0x0000000C,3
@@ -195,7 +195,7 @@ Size=532,319
 Collapsed=0
 
 [Window][JsonManager]
-Pos=1004,243
+Pos=972,302
 Size=498,427
 Collapsed=0
 DockId=0x0000000C,5
@@ -238,21 +238,27 @@ Size=500,410
 Collapsed=0
 
 [Window][UIButton]
-Pos=634,210
+Pos=876,350
 Size=422,414
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][UISub]
-Pos=634,210
+Pos=876,350
+Size=422,414
+Collapsed=0
+DockId=0x00000003,1
+
+[Window][UdISub]
+Pos=876,350
 Size=422,414
 Collapsed=0
 DockId=0x00000003,1
 
 [Docking][Data]
 DockNode    ID=0x00000002 Pos=49,55 Size=495,296 Selected=0x656C8C0F
-DockNode    ID=0x00000003 Pos=634,210 Size=422,414 Selected=0xE03A3A95
-DockNode    ID=0x0000000C Pos=1004,243 Size=498,427 Selected=0xD6D5E0EF
+DockNode    ID=0x00000003 Pos=876,350 Size=422,414 Selected=0xE03A3A95
+DockNode    ID=0x0000000C Pos=972,302 Size=498,427 Selected=0x8C00EA1E
 DockSpace   ID=0xAFC85805 Window=0x079D3A04 Pos=0,0 Size=1280,720 Split=X
   DockNode  ID=0x00000006 Parent=0xAFC85805 SizeRef=976,704 CentralNode=1 Selected=0xFBFB596A
   DockNode  ID=0x00000008 Parent=0xAFC85805 SizeRef=286,704 Selected=0x5ACCD6C9
