--- a/imgui.ini
+++ b/imgui.ini
@@ -45,16 +45,16 @@ Size=177,96
 Collapsed=0
 
 [Window][Camera Mode]
-Pos=972,302
+Pos=771,235
+Size=498,427
+Collapsed=0
+DockId=0x0000000C,2
+
+[Window][Particle]
+Pos=771,235
 Size=498,427
 Collapsed=0
 DockId=0x0000000C,4
-
-[Window][Particle]
-Pos=972,302
-Size=498,427
-Collapsed=0
-DockId=0x0000000C,6
 
 [Window][Particle Control]
 Pos=60,60
@@ -104,7 +104,7 @@ Collapsed=0
 DockId=0xC3C5E3D9,3
 
 [Window][Lighting Editor]
-Pos=972,302
+Pos=771,235
 Size=498,427
 Collapsed=0
 DockId=0x0000000C,0
@@ -120,10 +120,10 @@ Collapsed=0
 DockId=0xC3C5E3D9,1
 
 [Window][Emitter]
-Pos=972,302
+Pos=771,235
 Size=498,427
 Collapsed=0
-DockId=0x0000000C,7
+DockId=0x0000000C,5
 
 [Window][EmitterPos]
 Pos=319,578
@@ -137,16 +137,16 @@ Size=830,40
 Collapsed=0
 
 [Window][Player Editor]
-Pos=972,302
+Pos=771,235
+Size=498,427
+Collapsed=0
+DockId=0x0000000C,6
+
+[Window][Weapon Debug]
+Pos=771,235
 Size=498,427
 Collapsed=0
 DockId=0x0000000C,2
-
-[Window][Weapon Debug]
-Pos=972,302
-Size=498,427
-Collapsed=0
-DockId=0x0000000C,1
 
 [Window][Enemy]
 ViewportPos=1237,379
@@ -157,16 +157,16 @@ Collapsed=0
 DockId=0x0000000C,1
 
 [Window][Collision Manager Debug]
-Pos=972,302
+Pos=771,235
 Size=498,427
 Collapsed=0
-DockId=0x0000000C,3
+DockId=0x0000000C,1
 
 [Window][FPS]
-Pos=994,0
-Size=286,720
+Pos=1043,112
+Size=257,106
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000006,1
 
 [Window][Global Variables]
 ViewportPos=1138,195
@@ -195,10 +195,10 @@ Size=532,319
 Collapsed=0
 
 [Window][JsonManager]
-Pos=972,302
+Pos=771,235
 Size=498,427
 Collapsed=0
-DockId=0x0000000C,5
+DockId=0x0000000C,3
 
 [Window][JsonManager - FollowCamera]
 Pos=49,55
@@ -218,9 +218,10 @@ Size=300,100
 Collapsed=0
 
 [Window][Occlusion Query]
-Pos=742,-2
+Pos=1043,112
 Size=257,106
 Collapsed=0
+DockId=0x00000006,0
 
 [Window][SaveSuccessPopup]
 Pos=534,323
@@ -255,13 +256,19 @@ Size=422,414
 Collapsed=0
 DockId=0x00000003,1
 
+[Window][DebugCamera Info]
+Size=1280,111
+Collapsed=0
+DockId=0x00000005,0
+
 [Docking][Data]
 DockNode    ID=0x00000002 Pos=49,55 Size=495,296 Selected=0x656C8C0F
 DockNode    ID=0x00000003 Pos=876,350 Size=422,414 Selected=0xE03A3A95
-DockNode    ID=0x0000000C Pos=972,302 Size=498,427 Selected=0x8C00EA1E
-DockSpace   ID=0xAFC85805 Window=0x079D3A04 Pos=0,0 Size=1280,720 Split=X
-  DockNode  ID=0x00000006 Parent=0xAFC85805 SizeRef=976,704 CentralNode=1 Selected=0xFBFB596A
-  DockNode  ID=0x00000008 Parent=0xAFC85805 SizeRef=286,704 Selected=0x5ACCD6C9
+DockNode    ID=0x00000006 Pos=1043,112 Size=257,106 Selected=0x5ACCD6C9
+DockNode    ID=0x0000000C Pos=771,235 Size=498,427 Selected=0x8C00EA1E
+DockSpace   ID=0xAFC85805 Window=0x079D3A04 Pos=0,0 Size=1280,720 Split=Y
+  DockNode  ID=0x00000005 Parent=0xAFC85805 SizeRef=1280,111 Selected=0xABD2EB83
+  DockNode  ID=0x00000007 Parent=0xAFC85805 SizeRef=1280,607 CentralNode=1
 DockSpace   ID=0xC3C5E3D9 Pos=576,189 Size=1256,697 Split=Y
   DockNode  ID=0x00000004 Parent=0xC3C5E3D9 SizeRef=1264,391 CentralNode=1 Selected=0x744B41B5
   DockNode  ID=0x00000001 Parent=0xC3C5E3D9 SizeRef=1264,327 Selected=0x5BD5222E
