右クリでy値じゃなくz値が変わるように変更

--- a/imgui.ini
+++ b/imgui.ini
@@ -45,13 +45,13 @@ Size=177,96
 Collapsed=0
 
 [Window][Camera Mode]
-Pos=771,235
+Pos=831,198
 Size=498,427
 Collapsed=0
 DockId=0x0000000C,2
 
 [Window][Particle]
-Pos=771,235
+Pos=831,198
 Size=498,427
 Collapsed=0
 DockId=0x0000000C,4
@@ -104,7 +104,7 @@ Collapsed=0
 DockId=0xC3C5E3D9,3
 
 [Window][Lighting Editor]
-Pos=771,235
+Pos=831,198
 Size=498,427
 Collapsed=0
 DockId=0x0000000C,0
@@ -120,7 +120,7 @@ Collapsed=0
 DockId=0xC3C5E3D9,1
 
 [Window][Emitter]
-Pos=771,235
+Pos=831,198
 Size=498,427
 Collapsed=0
 DockId=0x0000000C,5
@@ -137,16 +137,16 @@ Size=830,40
 Collapsed=0
 
 [Window][Player Editor]
-Pos=771,235
+Pos=831,198
+Size=498,427
+Collapsed=0
+DockId=0x0000000C,7
+
+[Window][Weapon Debug]
+Pos=831,198
 Size=498,427
 Collapsed=0
 DockId=0x0000000C,6
-
-[Window][Weapon Debug]
-Pos=771,235
-Size=498,427
-Collapsed=0
-DockId=0x0000000C,2
 
 [Window][Enemy]
 ViewportPos=1237,379
@@ -157,7 +157,7 @@ Collapsed=0
 DockId=0x0000000C,1
 
 [Window][Collision Manager Debug]
-Pos=771,235
+Pos=831,198
 Size=498,427
 Collapsed=0
 DockId=0x0000000C,1
@@ -195,7 +195,7 @@ Size=532,319
 Collapsed=0
 
 [Window][JsonManager]
-Pos=771,235
+Pos=831,198
 Size=498,427
 Collapsed=0
 DockId=0x0000000C,3
@@ -265,7 +265,7 @@ DockId=0x00000005,0
 DockNode    ID=0x00000002 Pos=49,55 Size=495,296 Selected=0x656C8C0F
 DockNode    ID=0x00000003 Pos=876,350 Size=422,414 Selected=0xE03A3A95
 DockNode    ID=0x00000006 Pos=1043,112 Size=257,106 Selected=0x5ACCD6C9
-DockNode    ID=0x0000000C Pos=771,235 Size=498,427 Selected=0x8C00EA1E
+DockNode    ID=0x0000000C Pos=831,198 Size=498,427 Selected=0x9D3EAE6C
 DockSpace   ID=0xAFC85805 Window=0x079D3A04 Pos=0,0 Size=1280,720 Split=Y
   DockNode  ID=0x00000005 Parent=0xAFC85805 SizeRef=1280,111 Selected=0xABD2EB83
   DockNode  ID=0x00000007 Parent=0xAFC85805 SizeRef=1280,607 CentralNode=1
